--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -24,6 +24,8 @@ wasm-bindgen = "=0.2.87"
 thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
+openidconnect = { version = "3.3.0", optional = true }
+anyhow = { version = "*", optional = true }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -33,6 +35,8 @@ ssr = [
     "dep:tower",
     "dep:tower-http",
     "dep:leptos_axum",
+    "dep:openidconnect",
+    "dep:anyhow",
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
