--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 axum = { version = "0.6.4", optional = true }
+axum-sessions = { version = "0.5.0", optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
@@ -15,6 +16,8 @@ leptos = { version = "0.4", features = ["nightly"] }
 leptos_axum = { version = "0.4", optional = true }
 leptos_meta = { version = "0.4", features = ["nightly"] }
 leptos_router = { version = "0.4", features = ["nightly"] }
+serde = { version = "*", features = ["derive"] }
+rand = { version = "0.8.5", features = ["min_const_gen"] }
 log = "0.4"
 simple_logger = "4"
 tokio = { version = "1.25.0", optional = true }
@@ -31,6 +34,7 @@ anyhow = { version = "*", optional = true }
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
     "dep:axum",
+    "dep:axum-sessions",
     "dep:tokio",
     "dep:tower",
     "dep:tower-http",
