Init: show matching forums in create content form

--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -13,10 +13,10 @@ axum_session = { version = "0.5.0", features = [ "postgres-rustls"], optional = 
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.5", features = ["nightly"] }
-leptos_axum = { version = "0.5", optional = true }
-leptos_meta = { version = "0.5", features = ["nightly"] }
-leptos_router = { version = "0.5", features = ["nightly"] }
+leptos = { git = "https://github.com/leptos-rs/leptos.git", rev = "a3af4eb8fe09af1d7d538a660094940a17ff2285", features = ["nightly"] }
+leptos_axum = { git = "https://github.com/leptos-rs/leptos.git", rev = "a3af4eb8fe09af1d7d538a660094940a17ff2285", optional = true }
+leptos_meta = { git = "https://github.com/leptos-rs/leptos.git", rev = "a3af4eb8fe09af1d7d538a660094940a17ff2285", features = ["nightly"] }
+leptos_router = { git = "https://github.com/leptos-rs/leptos.git", rev = "a3af4eb8fe09af1d7d538a660094940a17ff2285", features = ["nightly"] }
 serde = { version = "*", features = ["derive"] }
 rand = { version = "0.8.5", features = ["min_const_gen"] }
 log = "0.4"
@@ -32,6 +32,7 @@ sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ], optional
 openidconnect = { version = "3.3.0", optional = true }
 anyhow = { version = "*", optional = true }
 async-trait = { version = "*", optional = true }
+const_format = "0.2.31"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
