--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -29,8 +29,8 @@ wasm-bindgen = "=0.2.87"
 thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
-sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "time" ], optional = true }
-time = "0.3.30"
+sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "time" ], optional = true }
+time = { version = "*", features = [ "serde" ] }
 openidconnect = { version = "3.3.0", optional = true }
 anyhow = { version = "*", optional = true }
 async-trait = { version = "*", optional = true }
