--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 axum = { version = "0.6.4", optional = true }
-axum-extra = { version = "*", features = [ "cookie" ], optional = true }
+axum-extra = { version = "*", optional = true }
 axum_session = { version = "0.8.0", features = [ "postgres-rustls"], optional = true }
 axum_session_auth = { version = "0.8.0", features = [ "postgres-rustls" ], optional = true }
 console_error_panic_hook = "0.1"
@@ -35,6 +35,11 @@ openidconnect = { version = "3.3.0", optional = true }
 anyhow = { version = "*", optional = true }
 async-trait = { version = "*", optional = true }
 const_format = "0.2.31"
+i18n-embed = { version = "0.14", features = ["fluent-system", "web-sys-requester"]}
+i18n-embed-fl = "*"
+rust-embed = "8"
+unic-langid = "0.9"
+once_cell = "*"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
