Init: successful build after upgrade to leptos 0.6

--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -7,28 +7,27 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-axum = { version = "0.6.4", optional = true }
-axum-extra = { version = "*", optional = true }
-axum_session = { version = "0.9", features = [ "postgres-rustls"], optional = true }
-axum_session_auth = { version = "0.9", features = [ "postgres-rustls" ], optional = true }
+axum = { version = "0.7", features = [ "macros" ], optional = true }
+axum_session = { version = "0.10", features = [ "postgres-rustls"], optional = true }
+axum_session_auth = { version = "0.10", features = [ "postgres-rustls" ], optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version="0.5.4", features = ["nightly"] }
-leptos_axum = { version="0.5.4", optional = true }
-leptos_meta = { version="0.5.4", features = ["nightly"] }
-leptos_router = { version="0.5.4", features = ["nightly"] }
+leptos = { version="0.6", features = ["nightly"] }
+leptos_axum = { version="0.6", optional = true }
+leptos_meta = { version="0.6", features = ["nightly"] }
+leptos_router = { version="0.6", features = ["nightly"] }
 serde = { version = "*", features = ["derive"] }
 rand = { version = "0.8.5", features = ["min_const_gen"] }
 log = "0.4"
 simple_logger = "4"
-tokio = { version = "1.25.0", optional = true }
-tower = { version = "0.4.13", optional = true }
-tower-http = { version = "0.4", features = ["fs"], optional = true }
+tokio = { version = "1", optional = true }
+tower = { version = "0.4", optional = true }
+tower-http = { version = "0.5", features = ["fs"], optional = true }
 wasm-bindgen = "=0.2.87"
 thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
-http = "0.2.8"
+http = "1"
 sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "chrono" ], optional = true }
 chrono = { version = "*", features = [ "serde" ] }
 openidconnect = { version = "3.3.0", optional = true }
@@ -37,10 +36,10 @@ async-trait = { version = "*", optional = true }
 const_format = "0.2.31"
 
 [features]
+default = ["ssr"]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
     "dep:axum",
-    "dep:axum-extra",
     "dep:axum_session",
     "dep:axum_session_auth",
     "dep:tokio",
