--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["app", "frontend", "server"]
+members = ["app", "frontend", "server", "services"]
 
 # need to be applied only to wasm build
 [profile.release]
