--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -20,9 +20,11 @@ log.workspace = true
 serde.workspace = true
 sqlx = { workspace = true, optional = true }
 thiserror.workspace = true
+tokio = { workspace = true, optional = true }
 
 async-trait = { version = "*", optional = true }
 
+cfg-if = "1"
 const_format = "0.2.31"
 openidconnect = { version = "3.3.0", optional = true }
 tracing-subscriber = "0.3.18"
@@ -44,5 +46,6 @@ ssr = [
 ]
 server = [
     "dep:sqlx",
+    "dep:tokio",
 ]
 
