--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -38,7 +38,7 @@ wasm-bindgen = "=0.2.87"
 # that are used together frontend (lib) & server (bin)
 [[workspace.metadata.leptos]]
 # this name is used for the wasm, js and css file names
-name = "start-axum-workspace"
+name = "sharesphere"
 
 # the package in the workspace that contains the server binary (binary crate)
 bin-package = "server"
