--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -29,6 +29,9 @@ const_format = "0.2.31"
 openidconnect = { version = "3.3.0", optional = true }
 tracing-subscriber = "0.3.18"
 
+[dev-dependencies]
+rand = "0.8.5"
+
 [features]
 default = []
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
