--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -26,6 +26,8 @@ async-trait = { version = "*", optional = true }
 
 cfg-if = "1"
 const_format = "0.2.31"
+femark = { version = "0.1.5", optional = true }
+markdown_to_html_parser = "0.1.0"
 openidconnect = { version = "3.3.0", optional = true }
 tracing-subscriber = "0.3.18"
 
@@ -43,6 +45,7 @@ ssr = [
     "dep:async-trait",
     "dep:axum_session",
     "dep:axum_session_auth",
+    "dep:femark",
     "dep:leptos_axum",
     "dep:openidconnect",
     "dep:sqlx",
