--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -26,7 +26,8 @@ async-trait = { version = "*", optional = true }
 
 cfg-if = "1"
 const_format = "0.2.31"
-femark = { version = "0.1.5", optional = true }
+pulldown-cmark = { version = "0.10.0", default-features = false, features = ["simd", "html"], optional = true }
+quick-xml = { version = "0.31.0", optional = true }
 markdown_to_html_parser = "0.1.0"
 openidconnect = { version = "3.3.0", optional = true }
 tracing-subscriber = "0.3.18"
@@ -45,7 +46,8 @@ ssr = [
     "dep:async-trait",
     "dep:axum_session",
     "dep:axum_session_auth",
-    "dep:femark",
+    "dep:pulldown-cmark",
+    "dep:quick-xml",
     "dep:leptos_axum",
     "dep:openidconnect",
     "dep:sqlx",
