--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -26,9 +26,9 @@ async-trait = { version = "*", optional = true }
 
 cfg-if = "1"
 const_format = "0.2.31"
+markdown = { version = "1.0.0-alpha.16", optional = true }
 pulldown-cmark = { version = "0.10.0", default-features = false, features = ["simd", "html"], optional = true }
 quick-xml = { version = "0.31.0", optional = true }
-markdown_to_html_parser = "0.1.0"
 openidconnect = { version = "3.3.0", optional = true }
 tracing-subscriber = "0.3.18"
 
@@ -46,6 +46,7 @@ ssr = [
     "dep:async-trait",
     "dep:axum_session",
     "dep:axum_session_auth",
+    "dep:markdown",
     "dep:pulldown-cmark",
     "dep:quick-xml",
     "dep:leptos_axum",
