--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -29,8 +29,7 @@ const_format = "0.2.31"
 markdown = { version = "1.0.0-alpha.16", optional = true }
 quick-xml = { version = "0.31.0", optional = true }
 openidconnect = { version = "3.3.0", optional = true }
-strum = "0.26"
-strum_macros = "0.26"
+serde_json = "1.0.115"
 tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
