--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -14,6 +14,8 @@ leptos_meta = { version = "0.6.10", features = ["nightly"] }
 leptos_router = { version = "0.6.10", features = ["nightly"] }
 leptos_axum = { version = "0.6.10" }
 
+leptos-use = "0.10.8"
+
 anyhow = "*"
 axum = {  version = "0.7", features = [ "macros" ] }
 axum_session = { version = "0.12", features = [ "postgres-rustls"] }
