Init: update wasm-bindgen and leptos-use

--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -11,6 +11,8 @@ leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos_axum = { workspace = true, optional = true }
 
+leptos-use.workspace = true
+
 anyhow = { workspace = true, optional = true }
 axum_session = { workspace = true, optional = true }
 axum_session_auth = { workspace = true, optional = true }
