--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -9,12 +9,12 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
-leptos = { version = "0.6.10", features = ["nightly"] }
-leptos_meta = { version = "0.6.10", features = ["nightly"] }
-leptos_router = { version = "0.6.10", features = ["nightly"] }
-leptos_axum = { version = "0.6.10" }
+leptos = { version = "0.6.14", features = ["nightly"] }
+leptos_meta = { version = "0.6.14", features = ["nightly"] }
+leptos_router = { version = "0.6.14", features = ["nightly"] }
+leptos_axum = { version = "0.6.14" }
 
-leptos-use = "0.10.8"
+leptos-use = "0.12.0"
 
 anyhow = "*"
 axum = {  version = "0.7", features = [ "macros" ] }
@@ -32,7 +32,8 @@ thiserror = "1"
 tokio = { version = "1.33.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.5", features = ["full"] }
-wasm-bindgen = "=0.2.92"
+wasm-bindgen = "=0.2.93"
+web-sys = "0.3.70"
 
 # See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
 
