--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -18,19 +18,20 @@ leptos-use = "0.12.0"
 
 anyhow = "*"
 axum = {  version = "0.7", features = [ "macros" ] }
-axum_session = { version = "0.12", features = [ "postgres-rustls"] }
-axum_session_auth = { version = "0.12", features = [ "postgres-rustls" ] }
+axum_session = { version = "0.14.2" }
+axum_session_auth = { version = "0.14.1" }
+axum_session_sqlx = { version = "0.3.0" }
 console_error_panic_hook = "0.1.7"
 console_log = "1"
 chrono = { version = "0.4.38", features = [ "alloc", "serde" ] }
 http = "1"
 log = "0.4.20"
 serde = { version = "*", features = ["derive"] }
-simple_logger = "4.2.0"
-sqlx = { version = "0.7", features = [ "chrono", "postgres", "runtime-tokio", "tls-rustls" ] }
+simple_logger = "5.0.0"
+sqlx = { version = "0.8.2", features = [ "chrono", "postgres", "runtime-tokio", "tls-rustls" ] }
 thiserror = "1"
 tokio = { version = "1.33.0", features = ["full"] }
-tower = { version = "0.4.13", features = ["full"] }
+tower = { version = "0.5.0", features = ["full"] }
 tower-http = { version = "0.5", features = ["full"] }
 wasm-bindgen = "=0.2.93"
 web-sys = "0.3.70"
