--- a/web-app/server/Cargo.toml
+++ b/web-app/server/Cargo.toml
@@ -15,6 +15,7 @@ anyhow.workspace = true
 axum.workspace = true
 axum_session.workspace = true
 axum_session_auth.workspace = true
+axum_session_sqlx.workspace = true
 log.workspace = true
 simple_logger.workspace = true
 sqlx.workspace = true
