Libs: update leptos to 0.7-beta, need to fix router and LoginGuardButton, restore leptos_use, review components that were changed from reference to clone and improve user handling

--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -43,7 +43,7 @@ rand = "0.8.5"
 
 [features]
 default = []
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+hydrate = ["leptos/hydrate"]
 ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
