--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -9,10 +9,10 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
-leptos = { version = "0.6.14", features = ["nightly"] }
-leptos_meta = { version = "0.6.14", features = ["nightly"] }
-leptos_router = { version = "0.6.14", features = ["nightly"] }
-leptos_axum = { version = "0.6.14" }
+leptos = { version = "0.7.0-beta5", features = ["nightly"] }
+leptos_meta = { version = "0.7.0-beta5" }
+leptos_router = { version = "0.7.0-beta5", features = ["nightly"] }
+leptos_axum = { version = "0.7.0-beta5" }
 
 leptos-use = "0.12.0"
 
@@ -30,9 +30,9 @@ serde = { version = "*", features = ["derive"] }
 simple_logger = "5.0.0"
 sqlx = { version = "0.8.2", features = [ "chrono", "postgres", "runtime-tokio", "tls-rustls" ] }
 thiserror = "1"
-tokio = { version = "1.33.0", features = ["full"] }
-tower = { version = "0.5.0", features = ["full"] }
-tower-http = { version = "0.5", features = ["full"] }
+tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
+tower = { version = "0.5.0", features = ["util"] }
+tower-http = { version = "0.5", features = ["fs"] }
 wasm-bindgen = "=0.2.93"
 web-sys = "0.3.70"
 
