Lib: fix LoginGuardButton and reintroduce it and Unpack where previously removed, use Either instead of into_any where posssible.

--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -9,6 +9,7 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
+#leptos = { git = 'https://github.com/leptos-rs/leptos.git', branch = 'component-erasure', features = ["nightly"] }
 leptos = { version = "0.7.0-beta5", features = ["nightly"] }
 leptos_meta = { version = "0.7.0-beta5" }
 leptos_router = { version = "0.7.0-beta5", features = ["nightly"] }
