--- a/web-app/server/Cargo.toml
+++ b/web-app/server/Cargo.toml
@@ -17,6 +17,7 @@ axum_session.workspace = true
 axum_session_auth.workspace = true
 axum_session_sqlx.workspace = true
 log.workspace = true
+lru.workspace = true
 simple_logger.workspace = true
 sqlx.workspace = true
 tokio.workspace = true
