Start trying to use drop box from leptos-use as file input

--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -15,7 +15,7 @@ leptos_router = { version = "0.7.0-gamma3", features = ["nightly"] }
 leptos_axum = { version = "0.7.0-gamma3" }
 server_fn = { version = "0.7.0-gamma3", features = [ "multipart"] }
 
-leptos-use = { version = "0.14.0-gamma2", features = ["use_textarea_autosize"] }
+leptos-use = { version = "0.14.0-gamma2", features = ["use_textarea_autosize", "use_drop_zone"] }
 
 anyhow = "*"
 axum = {  version = "0.7", features = [ "macros" ] }
