--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -41,8 +41,11 @@ serde_json = "1.0.128"
 tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
+bytes = "1.7.1"
 float-cmp = "0.9.0"
+futures-util = "0.3.30"
 indoc = "2.0.5"
+multer = "3.1.0"
 rand = "0.8.5"
 
 [features]
