--- a/web-app/Cargo.toml
+++ b/web-app/Cargo.toml
@@ -9,13 +9,13 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
-leptos = { version = "0.7.0-gamma3", features = ["nightly"] }
-leptos_meta = { version = "0.7.0-gamma3" }
-leptos_router = { version = "0.7.0-gamma3", features = ["nightly"] }
-leptos_axum = { version = "0.7.0-gamma3" }
-server_fn = { version = "0.7.0-gamma3", features = [ "multipart"] }
+leptos = { version = "0.7.0-rc1", features = ["nightly"] }
+leptos_meta = { version = "0.7.0-rc1" }
+leptos_router = { version = "0.7.0-rc1", features = ["nightly"] }
+leptos_axum = { version = "0.7.0-rc1" }
+server_fn = { version = "0.7.0-rc1", features = [ "multipart"] }
 
-leptos-use = { version = "0.14.0-gamma2", features = ["use_textarea_autosize"] }
+leptos-use = { version = "0.14.0-rc3", features = ["use_textarea_autosize"] }
 
 anyhow = "*"
 axum = {  version = "0.7", features = [ "macros" ] }
@@ -31,11 +31,11 @@ lru = "0.12.5"
 serde = { version = "*", features = ["derive"] }
 simple_logger = "5.0.0"
 sqlx = { version = "0.8.2", features = [ "chrono", "postgres", "runtime-tokio", "tls-rustls" ] }
-thiserror = "1"
+thiserror = "2.0.3"
 tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
 tower = { version = "0.5.0", features = ["util"] }
-tower-http = { version = "0.5", features = ["fs"] }
-wasm-bindgen = "=0.2.93"
+tower-http = { version = "0.6.2", features = ["fs"] }
+wasm-bindgen = "=0.2.95"
 web-sys = "0.3.70"
 
 # See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
