--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -26,18 +26,23 @@ serde.workspace = true
 sqlx = { workspace = true, optional = true }
 thiserror.workspace = true
 tokio = { workspace = true, optional = true }
+web-sys.workspace = true
 
 async-trait = { version = "*", optional = true }
 
 cfg-if = "1"
 const_format = "0.2.33"
+gloo-net = { version = "0.6.0", features = ["http"] }
 infer = { version = "0.16.0", optional = true }
 markdown = { version = "1.0.0-alpha.20", optional = true }
+oembed-rs = "0.0.8"
 quick-xml = { version = "0.37.1", optional = true }
 openidconnect = { version = "3.5.0", optional = true }
+reqwest = { version = "0.12.12", features = ["json"], optional = true }
+send_wrapper = { version = "0.6.0", features = ["futures"] }
+serde_json = "1.0.128"
 strum = "0.26.3"
 strum_macros = "0.26.4"
-serde_json = "1.0.128"
 tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
@@ -67,6 +72,7 @@ ssr = [
     "dep:leptos_axum",
     "dep:lru",
     "dep:openidconnect",
+    "dep:reqwest",
     "dep:sqlx",
     "dep:tokio",
 ]
