--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -34,6 +34,7 @@ cfg-if = "1"
 const_format = "0.2.33"
 gloo-net = { version = "0.6.0", features = ["http"] }
 infer = { version = "0.16.0", optional = true }
+lazy_static = "1.5.0"
 markdown = { version = "1.0.0-alpha.20", optional = true }
 oembed-rs = "0.0.8"
 quick-xml = { version = "0.37.1", optional = true }
