--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -36,7 +36,7 @@ gloo-net = { version = "0.6.0", features = ["http"] }
 infer = { version = "0.16.0", optional = true }
 lazy_static = "1.5.0"
 markdown = { version = "1.0.0-alpha.20", optional = true }
-oembed-rs = "0.0.8"
+mime_guess = "2.0.5"
 quick-xml = { version = "0.37.1", optional = true }
 openidconnect = { version = "3.5.0", optional = true }
 reqwest = { version = "0.12.12", features = ["json"], optional = true }
