--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -45,6 +45,7 @@ serde_json = "1.0.128"
 strum = "0.26.3"
 strum_macros = "0.26.4"
 tracing-subscriber = "0.3.18"
+url = "*"
 
 [dev-dependencies]
 bytes = "1.7.1"
