Post types: add clean_html to sanitize content from oEmbed html. Need to store link_embed and thumbnail url in DB, check security (CSP, headers, iframe size control, etc.)

--- a/web-app/app/Cargo.toml
+++ b/web-app/app/Cargo.toml
@@ -30,6 +30,7 @@ web-sys.workspace = true
 
 async-trait = { version = "*", optional = true }
 
+ammonia = { version = "4", optional = true }
 cfg-if = "1"
 const_format = "0.2.33"
 gloo-net = { version = "0.6.0", features = ["http"] }
@@ -63,6 +64,7 @@ ssr = [
     "leptos_meta/ssr",
     "leptos_router/ssr",
     "leptos-use/ssr",
+    "dep:ammonia",
     "dep:anyhow",
     "dep:async-trait",
     "dep:axum_session",
