--- a/web-app/package.json
+++ b/web-app/package.json
@@ -1,12 +1,15 @@
 {
   "scripts": {
-    "build": "npx tailwindcss -i ./input.css -o ./style/main.scss",
-    "watch": "npx tailwindcss -i ./input.css -o ./style/main.scss --watch"
+    "build": "npx @tailwindcss/cli -i ./input.css -o ./style/main.scss",
+    "watch": "npx @tailwindcss/cli -i ./input.css -o ./style/main.scss --watch"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "daisyui": "^4.12.24",
+    "daisyui": "^5.0.4",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.0.14"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.0.14"
   }
 }
