--- a/web-app/utils/Cargo.toml
+++ b/web-app/utils/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "app"
+name = "utils"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-utils = { path = "../utils", default-features = false}
 leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
@@ -25,36 +24,39 @@ log.workspace = true
 lru = { workspace = true, optional = true }
 serde.workspace = true
 sqlx = { workspace = true, optional = true }
+thiserror.workspace = true
 tokio = { workspace = true, optional = true }
 web-sys.workspace = true
 
 async-trait = { version = "*", optional = true }
 
+ammonia = "4"
 const_format = "0.2.33"
+gloo-net = { version = "0.6.0", features = ["http"] }
 infer = { version = "0.19.0", optional = true }
+lazy_static = "1.5.0"
 markdown = { version = "1.0.0-alpha.20", optional = true }
+mime_guess = "2.0.5"
 quick-xml = { version = "0.37.1", optional = true }
 openidconnect = { version = "4.0.0", optional = true }
 reqwest = { version = "0.12.12", features = ["json"], optional = true }
+send_wrapper = { version = "0.6.0", features = ["futures"] }
+serde_json = "1.0.128"
 strum = "0.27.1"
 strum_macros = "0.27.1"
+url = "*"
 
 [dev-dependencies]
-bytes = "1.7.1"
-float-cmp = "0.10.0"
-futures-util = "0.3.30"
-multer = "3.1.0"
-rand = "0.9.0"
+indoc = "2.0.5"
 
 [features]
 default = []
-hydrate = ["leptos/hydrate", "utils/hydrate"]
+hydrate = ["leptos/hydrate"]
 ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
     "leptos-use/ssr",
-    "utils/ssr",
     "dep:anyhow",
     "dep:async-trait",
     "dep:axum_session",
