--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sharesphere_app = { path = "../sharesphere_app", default-features = false, features = ["hydrate"] }
+sharesphere_app = { path = "../lib/app", default-features = false, features = ["hydrate"] }
 leptos = { workspace = true, features = [ "hydrate" ] }
 
 console_error_panic_hook.workspace = true
