--- a/lib/app/Cargo.toml
+++ b/lib/app/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sharesphere_utils = { path = "../sharesphere_utils", default-features = false}
-sharesphere_auth = { path = "../sharesphere_auth", default-features = false}
-sharesphere_core = { path = "../sharesphere_core", default-features = false}
+sharesphere_utils = { path = "../utils", default-features = false}
+sharesphere_auth = { path = "../auth", default-features = false}
+sharesphere_core = { path = "../core", default-features = false}
 leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
