--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "sharesphere_auth"
+name = "sharesphere_core"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sharesphere_utils = { path = "../sharesphere_utils", default-features = false}
+sharesphere_utils = { path = "../utils", default-features = false}
+sharesphere_auth = { path = "../auth", default-features = false}
 
 leptos.workspace = true
 leptos_meta.workspace = true
@@ -55,7 +56,8 @@ indoc = "2.0.5"
 default = []
 hydrate = [
     "leptos/hydrate",
-    "sharesphere_utils/hydrate"
+    "sharesphere_utils/hydrate",
+    "sharesphere_auth/hydrate",
 ]
 ssr = [
     "leptos/ssr",
@@ -63,6 +65,7 @@ ssr = [
     "leptos_router/ssr",
     "leptos-use/ssr",
     "sharesphere_utils/ssr",
+    "sharesphere_auth/ssr",
     "dep:anyhow",
     "dep:async-trait",
     "dep:axum_session",
