--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sharesphere_utils = { path = "../sharesphere_utils", default-features = false, features = ["ssr"] }
-sharesphere_auth = { path = "../sharesphere_auth", default-features = false, features = ["ssr"] }
-sharesphere_app = { path = "../sharesphere_app", default-features = false, features = ["ssr"] }
+sharesphere_utils = { path = "../lib/utils", default-features = false, features = ["ssr"] }
+sharesphere_auth = { path = "../lib/auth", default-features = false, features = ["ssr"] }
+sharesphere_app = { path = "../lib/app", default-features = false, features = ["ssr"] }
 leptos = { workspace = true, features = [ "ssr" ]}
 leptos_axum.workspace = true
 
