Split content, sphere and component in separate crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ members = [
     "lib/utils",
     "lib/auth",
     "lib/core",
+    "lib/sphere",
+    "lib/content",
+    "lib/components",
     "lib/app",
     "frontend",
     "server",
