--- a/lib/components/Cargo.toml
+++ b/lib/components/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sharesphere_app"
+name = "sharesphere_components"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,9 +9,6 @@ edition = "2021"
 sharesphere_utils = { path = "../utils", default-features = false}
 sharesphere_auth = { path = "../auth", default-features = false}
 sharesphere_core = { path = "../core", default-features = false}
-sharesphere_sphere = { path = "../sphere", default-features = false}
-sharesphere_content = { path = "../content", default-features = false}
-sharesphere_components = { path = "../components", default-features = false}
 leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
@@ -44,6 +41,13 @@ reqwest = { version = "0.12.12", features = ["json"], optional = true }
 strum = "0.27.1"
 strum_macros = "0.27.1"
 
+[dev-dependencies]
+bytes = "1.7.1"
+float-cmp = "0.10.0"
+futures-util = "0.3.30"
+multer = "3.1.0"
+rand = "0.9.0"
+
 [features]
 default = []
 hydrate = [
@@ -51,9 +55,6 @@ hydrate = [
     "sharesphere_utils/hydrate",
     "sharesphere_auth/hydrate",
     "sharesphere_core/hydrate",
-    "sharesphere_sphere/hydrate",
-    "sharesphere_content/hydrate",
-    "sharesphere_components/hydrate",
 ]
 ssr = [
     "leptos/ssr",
@@ -63,9 +64,6 @@ ssr = [
     "sharesphere_utils/ssr",
     "sharesphere_auth/ssr",
     "sharesphere_core/ssr",
-    "sharesphere_sphere/ssr",
-    "sharesphere_content/ssr",
-    "sharesphere_components/ssr",
     "dep:anyhow",
     "dep:async-trait",
     "dep:axum_session",
