--- a/lib/content/Cargo.toml
+++ b/lib/content/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sharesphere_app"
+name = "sharesphere_content"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,14 +9,10 @@ edition = "2021"
 sharesphere_utils = { path = "../utils", default-features = false}
 sharesphere_auth = { path = "../auth", default-features = false}
 sharesphere_core = { path = "../core", default-features = false}
-sharesphere_sphere = { path = "../sphere", default-features = false}
-sharesphere_content = { path = "../content", default-features = false}
-sharesphere_components = { path = "../components", default-features = false}
 leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos_axum = { workspace = true, optional = true }
-server_fn.workspace = true
 
 leptos-use.workspace = true
 
@@ -25,24 +21,18 @@ axum_session = { workspace = true, optional = true }
 axum_session_auth = { workspace = true, optional = true }
 axum_session_sqlx = { workspace = true, optional = true }
 chrono.workspace = true
-http.workspace = true
 log.workspace = true
 lru = { workspace = true, optional = true }
-serde.workspace = true
 sqlx = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true }
-web-sys.workspace = true
 
 async-trait = { version = "*", optional = true }
 
-const_format = "0.2.33"
 infer = { version = "0.19.0", optional = true }
 markdown = { version = "1.0.0-alpha.20", optional = true }
 quick-xml = { version = "0.37.1", optional = true }
 openidconnect = { version = "4.0.0", optional = true }
 reqwest = { version = "0.12.12", features = ["json"], optional = true }
-strum = "0.27.1"
-strum_macros = "0.27.1"
 
 [features]
 default = []
@@ -51,9 +41,6 @@ hydrate = [
     "sharesphere_utils/hydrate",
     "sharesphere_auth/hydrate",
     "sharesphere_core/hydrate",
-    "sharesphere_sphere/hydrate",
-    "sharesphere_content/hydrate",
-    "sharesphere_components/hydrate",
 ]
 ssr = [
     "leptos/ssr",
@@ -63,9 +50,6 @@ ssr = [
     "sharesphere_utils/ssr",
     "sharesphere_auth/ssr",
     "sharesphere_core/ssr",
-    "sharesphere_sphere/ssr",
-    "sharesphere_content/ssr",
-    "sharesphere_components/ssr",
     "dep:anyhow",
     "dep:async-trait",
     "dep:axum_session",
