--- a/lib/sphere/Cargo.toml
+++ b/lib/sphere/Cargo.toml
@@ -17,36 +17,11 @@ server_fn.workspace = true
 
 leptos-use.workspace = true
 
-anyhow = { workspace = true, optional = true }
-axum_session = { workspace = true, optional = true }
-axum_session_auth = { workspace = true, optional = true }
-axum_session_sqlx = { workspace = true, optional = true }
 chrono.workspace = true
-http.workspace = true
 log.workspace = true
-lru = { workspace = true, optional = true }
-serde.workspace = true
-sqlx = { workspace = true, optional = true }
-tokio = { workspace = true, optional = true }
 web-sys.workspace = true
 
-async-trait = { version = "*", optional = true }
-
-const_format = "0.2.33"
-infer = { version = "0.19.0", optional = true }
-markdown = { version = "1.0.0-alpha.20", optional = true }
-quick-xml = { version = "0.37.1", optional = true }
-openidconnect = { version = "4.0.0", optional = true }
-reqwest = { version = "0.12.12", features = ["json"], optional = true }
-strum = "0.27.1"
-strum_macros = "0.27.1"
-
-[dev-dependencies]
-bytes = "1.7.1"
-float-cmp = "0.10.0"
-futures-util = "0.3.30"
-multer = "3.1.0"
-rand = "0.9.0"
+strum.workspace = true
 
 [features]
 default = []
@@ -64,19 +39,6 @@ ssr = [
     "sharesphere_utils/ssr",
     "sharesphere_auth/ssr",
     "sharesphere_core/ssr",
-    "dep:anyhow",
-    "dep:async-trait",
-    "dep:axum_session",
-    "dep:axum_session_auth",
-    "dep:axum_session_sqlx",
-    "dep:infer",
-    "dep:markdown",
-    "dep:quick-xml",
     "dep:leptos_axum",
-    "dep:lru",
-    "dep:openidconnect",
-    "dep:reqwest",
-    "dep:sqlx",
-    "dep:tokio",
 ]
 
