--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,5 +24,6 @@ tokio.workspace = true
 tower.workspace = true
 tower-http.workspace = true
 
+base64 = "0.22.1"
 tracing-subscriber = "0.3.18"
 tracing = "0.1.40"
