--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -25,6 +25,7 @@ tokio = { workspace = true, optional = true }
 
 http = "1.3.1"
 infer = { version = "0.19.0", optional = true }
+object_store = {  version = "0.12.1", features = ["aws"], optional = true }
 
 [dev-dependencies]
 bytes = "1.10.1"
@@ -48,6 +49,7 @@ ssr = [
     "sharesphere_utils/ssr",
     "sharesphere_auth/ssr",
     "dep:infer",
+    "dep:object_store",
     "dep:leptos_axum",
     "dep:sqlx",
     "dep:tokio",
